kubernetes/ingress/ingress-principal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "bbg.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bbg-service
            port:
              number: 80
  - host: "luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-landing-page-service
            port:
              number: 4000
